--- a/static/messages.html
+++ b/static/messages.html
@@ -6,7 +6,7 @@
 <body>
 <div>
   <form method="POST" action="/form">     
-      <label>Message</label><input name="message" type="text" value="" />
+      <label>Message: </label><input name="message" type="text" value="" />
       <input type="submit" value="submit" />
   </form>
 </div>
